2008-08-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/gstbin.c: (gst_bin_element_set_state):
	When an element is in the locked state we still want to update the
	base_time of the element.

2008-08-21  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasesrc.c: (gst_base_src_default_negotiate):
	Use the result from gst_pad_set_caps() instead of assuming the element
	always accepted the caps computed by the default negotiate function.

2008-08-20  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/libs/gstreamer-libs-sections.txt:
	* libs/gst/base/gstbasetransform.c:
	(gst_base_transform_handle_buffer), (gst_base_transform_getrange),
	(gst_base_transform_chain), (gst_base_transform_suggest),
	(gst_base_transform_reconfigure):
	* libs/gst/base/gstbasetransform.h:
	Implement method for reconfiguring basetransform.
	API: GstBaseTransform::gst_base_transform_reconfigure()

2008-08-20  Stefan Kost  <ensonic@users.sf.net>

	patch by: Murray Cumming <murrayc@murrayc.com>

	* gst/gstutils.c:
	  Mention that this is just like gst_buffer_merge() but with extra
	  unreffing for C coders. Advise language bindings not to wrap it.
	  Fixes Bug #533856.
	  
	  Also fix file comment.

2008-08-20  Stefan Kost  <ensonic@users.sf.net>

	reviewed by: Wim Taymans <wim.taymans@collabora.co.uk>

	* plugins/elements/gstfakesink.c:
	* plugins/elements/gstfakesrc.c:
	  Call super::event() when not handling it. Fixes #544855.

2008-08-19  Michael Smith <msmith@songbirdnest.com>

	Patch by: Alessandro Decina <alessandro@nnva.org>
	* plugins/elements/gstfilesrc.c:
	  Use 64 bit variants of stat functions on win32, to enable support
	  of large files there.
	  Fixes #547277.

2008-08-19  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasesink.c: (gst_base_sink_render_object),
	(gst_base_sink_event), (gst_base_sink_chain_unlocked),
	(gst_base_sink_negotiate_pull), (gst_base_sink_pad_activate_pull),